Card lists - fix mis-aligned action links

--- a/root/static/styles.css
+++ b/root/static/styles.css
@@ -360,6 +360,9 @@ span.tag {
 
 .list-item .action-links a {
     color: #ddd;
+}
+
+.list-item .action-links a:not(:first-child) {
     margin-left: 15px;
 }
 
